qtbase-opensource-src (5.6.0~rc+dfsg-1ubuntu1) UNRELEASED; urgency=medium

  [ Timo Jyrinki ]
  * New upstream release. 
  * Migrate symbols using the script to the Qt_5 versioning scheme.
  * Update symbols and bump symbols abi.
  * Rebase and refresh enable-tests.patch.

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Mon, 18 Jan 2016 10:06:17 +0000

qtbase-opensource-src (5.6.0~rc+dfsg-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release candidate.
  * Merge 5.5.1+dfsg-15 from master.
  * Drop the following patches, all applied upstream:
    - Fix-falsely-reported-style-for-fallback-font.patch
    - Prefer-QT_PLUGIN_PATH-over-compiled-in-paths.patch
    - Remove-historical-4-padding-in-QFontEngine-alphaMapF.patch
    - multiscreen.diff
    - qnativesocketengine_freebsd.diff
    - qt_functions_missing_eval.diff
    - xcb-fix-yet-another-crash-when-screens-are-disconnec.patch
    - xcb_dont_select_XInput_events_on_root_window.patch
    - xcb_fix_drag_and_drop_when_window_is_hidden.patch
  * Add new build-dependency on libxcb-xinerama0-dev.
  * Update symbols files from the build log.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Add fix_alsa_detection.patch to workaround ALSA >= 1.1.0 detection. The
    patch is a simple workaround, a proper bug has been opened upstream as
    stated in the patch's headers.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 05 Mar 2016 10:35:53 +0300

qtbase-opensource-src (5.6.0~beta+dfsg-5) experimental; urgency=medium

  * Fix URLs pointing to our "How to package Qt based stuff" page
    (Closes: #810282). Thanks Jakob Haufe for the pointer.
  * Merge 5.5.1+dfsg-13's changes into the experimental branch.
    - Bump libqt5gui5's Breaks+Replaces so that users who installed
      the experimental version have a proper package update.
  * Remove the transitional package libqt5xcbqpa5, their only rdeps
    lived in sid/testing and already removed it.