@@ -5,6 +5,7 @@ qtbase-opensource-src (5.6.0~rc+dfsg-1ubuntu1) UNRELEASED; urgency=medium
   * Migrate symbols using the script to the Qt_5 versioning scheme.
   * Update symbols and bump symbols abi.
   * Rebase and refresh enable-tests.patch.
+  * Rebase qnam-ubuntu-fix6.patch.
 
  -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Mon, 18 Jan 2016 10:06:17 +0000
 
